erDiagram
    vehicle                    ||--o| vehicle_current_status : "현재 상태 1행"
    vehicle                    ||--o{ vehicle_status_history : "상태 이력"
    vehicle                    ||..o{ embedded_vehicle_command : "forklift_id"
    vehicle                    ||..o| vehicle_fork_current_status : "forklift_id"
    vehicle                    ||..o{ embedded_error_history : "forklift_id"
    vehicle                    ||..o{ ai_cargo_analysis : "vehicle_id"
    vehicle                    ||..o{ transport_task : "vehicle_id"

    ai_cargo_analysis          ||--o{ ai_cargo_detection_box : "박스 0..N"
    station_measurement        ||--o{ station_measurement_box : "박스 0..N"

    cargo                      ||--o{ pallet : "적재 화물"
    cargo                      ||--o{ transport_task : "운반 대상"
    cargo                      ||..o{ ai_cargo_analysis : "cargo_id"
    cargo                      ||..o{ storage_slot : "stored_cargo_id"

    pallet                     ||--o{ transport_task : "픽업 파렛트"

    rack                       ||--o{ rack_level : "단"
    rack_level                 ||--o{ storage_slot : "슬롯"
    storage_slot               ||--o{ transport_task : "목적 슬롯"
    transport_task             ||..o{ storage_slot : "reserved_task_id"
    transport_task             ||--o{ transport_command : "발행 명령 1..N"

    vehicle {
        bigint   id PK
        varchar  vehicle_id UK
        varchar  name
        varchar  source
        varchar  vehicle_type
        boolean  active
    }
    vehicle_current_status {
        varchar  vehicle_id PK,FK
        varchar  status
        int      battery
    }
    vehicle_status_history {
        bigint   id PK
        varchar  vehicle_id FK
        varchar  status
        datetime message_at
    }
    ai_cargo_analysis {
        bigint   id PK
        varchar  analysis_id UK
        varchar  vehicle_id
        varchar  cargo_id
        varchar  status
    }
    ai_cargo_detection_box {
        bigint   id PK
        bigint   analysis_id FK
        varchar  class_name
    }
    station_measurement {
        bigint   id PK
        varchar  measurement_id UK
        varchar  station_id
        varchar  status
    }
    station_measurement_box {
        bigint   id PK
        bigint   station_measurement_id FK
        int      box_order
    }
    embedded_vehicle_command {
        bigint   id PK
        varchar  command_id UK
        varchar  forklift_id
        varchar  command
        varchar  status
    }
    vehicle_fork_current_status {
        varchar  forklift_id PK
        varchar  fork_state
        boolean  limit_bottom
    }
    embedded_error_history {
        bigint   id PK
        varchar  forklift_id
        varchar  error_code
        varchar  severity
    }
    cargo {
        bigint   id PK
        varchar  cargo_id UK
        double   volume
    }
    pallet {
        bigint   id PK
        varchar  pallet_id UK
        varchar  cargo_id FK
        varchar  status
    }
    rack {
        bigint   id PK
        varchar  rack_code UK
    }
    rack_level {
        bigint   id PK
        bigint   rack_id FK
        int      level_number UK
    }
    storage_slot {
        bigint   id PK
        varchar  slot_code UK
        bigint   rack_level_id FK
        varchar  status
        varchar  reserved_task_id
        varchar  stored_cargo_id
    }
    transport_task {
        bigint   id PK
        varchar  task_code UK
        varchar  cargo_id FK
        varchar  pallet_id FK
        varchar  vehicle_id
        bigint   destination_slot_id FK
        varchar  status
    }
    transport_command {
        bigint   id PK
        varchar  command_id UK
        bigint   task_id FK
        varchar  vehicle_id
        varchar  status
    }
